--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "karma start",
     "start": "webpack-dashboard -c magenta -- webpack-dev-server --config ./tools/webpack.config.js --env=dev --progress --profile --colors",
     "build": "webpack --config ./tools/webpack.config.js --env=prd --progress --profile --colors",
-    "all": "yarn; yarn build"
+    "all": "npm install; npm run-script build"
   },
   "keywords": [
     "es6",
